keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"keycloak","namespace":"caritas"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"keycloak"}},"template":{"metadata":{"labels":{"app":"keycloak"}},"spec":{"containers":[{"args":["start-dev"],"env":[{"name":"KEYCLOAK_ADMIN","value":"admin"},{"name":"KEYCLOAK_ADMIN_PASSWORD","value":"admin"}],"image":"quay.io/keycloak/keycloak:20.0.5","name":"keycloak","ports":[{"containerPort":8080}]}],"hostNetwork":true} [...]
  creationTimestamp: "2025-10-14T18:39:02Z"
  generation: 1
  name: keycloak
  namespace: caritas
  resourceVersion: "84812"
  uid: bde3ff63-1cff-4681-91e5-cca4fa6b6941
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: keycloak
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: keycloak
    spec:
      containers:
      - args:
        - start-dev
        image: quay.io/keycloak/keycloak:20.0.5
        imagePullPolicy: IfNotPresent
        name: keycloak
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      hostNetwork: true
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2025-10-14T18:39:27Z"
    lastUpdateTime: "2025-10-14T18:39:27Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2025-10-14T18:39:02Z"
    lastUpdateTime: "2025-10-14T18:39:27Z"
    message: ReplicaSet "keycloak-554947bfb4" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
